--- a/crawlerNews.china/pom.xml
+++ b/crawlerNews.china/pom.xml
@@ -23,7 +23,12 @@
 			<artifactId>gson</artifactId>
 			<version>2.8.1</version>
 		</dependency>
-
+		<!-- https://mvnrepository.com/artifact/org.jsoup/jsoup -->
+		<dependency>
+			<groupId>org.jsoup</groupId>
+			<artifactId>jsoup</artifactId>
+			<version>1.10.3</version>
+		</dependency>
 
 	</dependencies>
 
