--- a/crawlerNews.china/src/main/resources/application.properties
+++ b/crawlerNews.china/src/main/resources/application.properties
@@ -1,15 +1,11 @@
-spring.jpa.hibernate.ddl-auto=update
-#none This is the default for MySQL, no change to the database structure.
-#update Hibernate changes the database according to the given Entity structures.
-#create Creates the database every time, but don\u2019t drop it when close.
-#create-drop Creates the database then drops it when the SessionFactory closes.
-spring.datasource.url=jdbc:mysql://localhost:3306/temp_analyse?useSSL=false
-spring.datasource.username=root
-spring.datasource.password=root
-spring.jpa.show-sql=true
-spring.jpa.properties.hibernate.format_sql=true
-server.port=8080
-server.context-path=/
+#rabbitMQ
+#ip加端口
+spring.rabbitmq.addresses=192.168.11.85:5672
+spring.rabbitmq.username=mc
+spring.rabbitmq.password=mc
+spring.rabbitmq.publisher-confirms=true
+#存储目录
+spring.rabbitmq.virtual-host=/
 
 
 #logging.file=log.log
